--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ x64/Debug/MiniGamesGL.tlog/CL.write.1.tlog
 x64/Debug/MiniGamesGL.tlog/link.read.1.tlog
 x64/Debug/vc143.idb
 x64/Debug/vc143.pdb
+*.log
