--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-x64/Debug/GLGame.obj
-x64/Debug/MiniGamesGL.ilk
-x64/Debug/MiniGamesGL.log
-x64/Debug/MiniGamesGL.tlog/CL.command.1.tlog
-x64/Debug/MiniGamesGL.tlog/CL.read.1.tlog
-x64/Debug/MiniGamesGL.tlog/CL.write.1.tlog
-x64/Debug/MiniGamesGL.tlog/link.read.1.tlog
-x64/Debug/vc143.idb
-x64/Debug/vc143.pdb
+*.ilk
 *.log
-x64/Debug/GLGame.obj
-x64/Debug/MiniGamesGL.ilk
-x64/Debug/MiniGamesGL.log
-x64/Debug/MiniGamesGL.tlog/CL.command.1.tlog
-x64/Debug/MiniGamesGL.tlog/CL.read.1.tlog
-x64/Debug/MiniGamesGL.tlog/CL.write.1.tlog
-x64/Debug/MiniGamesGL.tlog/link.read.1.tlog
-x64/Debug/vc143.idb
-x64/Debug/vc143.pdb
+*.tlog
+*.idb
+*.pdb
