--- a/MiniGamesGL.vcxproj.filters
+++ b/MiniGamesGL.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="Source Files\Managers">
       <UniqueIdentifier>{e0a7b2aa-fe9d-44ab-9536-8baf365ae005}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Game\GameObjects\Instanced">
+      <UniqueIdentifier>{4e28e457-288b-4e81-94b7-bb8dfe843212}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\glad\glad.h">
@@ -113,6 +116,12 @@
     </ClInclude>
     <ClInclude Include="Component.h">
       <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Box.h">
+      <Filter>Header Files\Game\GameObjects\Instanced</Filter>
+    </ClInclude>
+    <ClInclude Include="GreyFlag.h">
+      <Filter>Header Files\Game\GameObjects\Instanced</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
